# xgboost_ser_in_noise

./: .gitignore  CLAUDE.md  MakeFile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
src/: config.py  data_preparation.py  feature_extraction  feature_extraction.py  model_evaluator.py  model_trainer.py  noisy_data_generator.py  results_visualiser.py  utils.py
src/evaluation/: metrics.py  visualisation.py
src/features/: extractor.py
src/models/: __init__.py  xgboost_model.py
src/utils/: helpers.py  noise_generator.py
tests/: test_conftest.py  test_features.py  test_full_pipeline.py  test_noise_generator.py  test_utils.py  test_xgboost_model.py
